# hacktm

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README
hacktm/: CISpace.cpp  CISpace.h  CITSpace.h  CMakeLists.txt  Cell.cpp  Cell.h  CellsState.cpp  CellsState.h  Column.cpp  Column.h  DendriteSegment.cpp  DendriteSegment.h  HTMFunctions.cpp  HTMFunctions.h  HackTM.cpp  HackTM.h  HackTMConfig.h  HackTMHelpers.cpp  HackTMHelpers.h  HackTMNode.h  HackTMTime.h  Introspection.cpp  Introspection.h  Makefile  ProximalDendrite.cpp  ProximalDendrite.h  Region.cpp  Region.h  Space.cpp  Space.h  SpatialPooler.cpp  SpatialPooler.h  TemporalPooler.cpp  TemporalPooler.h  rnd_normal.cpp
include/: BitVector.h  CMakeLists.txt  SparseBitVector.h
include/llvm/: BitVector.h  MathExtras.h
include/llvm/ADT/: SparseBitVector.h
metric/: CMakeLists.txt  Distance.h  DistanceFunctions.cpp  DistanceFunctions.h  Makefile  MappingFunction.h  MetricSpace.cpp  MetricSpace.h  Sphere.h  Vector.h  rnd_normal.cpp  rnd_normal.h
tests/: CMakeLists.txt  Makefile  benchNode.cpp  showDendrites.cpp  showDendrites.gp  test.cpp  test1.xbm  test2.xbm  test3.xbm  test4.xbm  testMM.cpp  testNode.cpp  testNode3D.cpp  testRegion.cc  testRegion.cpp  testSphere.cc  testSphere.cpp  testkthScore.cpp  xbmlib.cpp  xbmlib.h
